--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "webpack": "~1.12.0"
   },
   "scripts": {
-    "pig": "http-server ./PIG -p 4041 -s & webpack --progress --watch",
+    "dashboard": "http-server ./Parse-Dashboard -p 4040 -s & webpack --config dashboard.config.js --progress --watch",
+    "pig": "http-server ./PIG -p 4041 -s & webpack --config PIG.config.js --progress --watch",
     "build": "NODE_ENV=production webpack --config production.config.js && webpack --config PIG.config.js",
     "test": "NODE_PATH=./node_modules jest",
     "generate": "node scripts/generate.js"
