Make ParseDashboard an express app

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,10 @@
 node_modules/
 bundles/
 PIG/bundles/
-Parse-Dashboard/bundles/
+Parse-Dashboard/public/bundles/
 Parse-Dashboard/parse-dashboard-config.json
+
+npm-debug.log
+
+// vim .swp
+*.swp
