--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "babel-runtime": "~5.8.25",
+    "express": "^4.13.4",
     "history": "~1.9.1",
     "immutable": "~3.7.5",
     "marked": "^0.3.5",
@@ -31,7 +32,7 @@
     "webpack": "~1.12.0"
   },
   "scripts": {
-    "dashboard": "http-server ./Parse-Dashboard -p 4040 -s & webpack --config dashboard.config.js --progress --watch",
+    "dashboard": "node ./Parse-Dashboard/index.js & webpack --config dashboard.config.js --progress --watch",
     "pig": "http-server ./PIG -p 4041 -s & webpack --config PIG.config.js --progress --watch",
     "build": "NODE_ENV=production webpack --config production.config.js && webpack --config PIG.config.js",
     "test": "NODE_PATH=./node_modules jest",
