--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "babel-runtime": "~5.8.25",
     "basic-auth": "^1.0.3",
+    "commander": "^2.9.0",
     "express": "^4.13.4",
     "history": "~1.9.1",
     "immutable": "~3.7.5",
@@ -39,7 +40,9 @@
     "build": "NODE_ENV=production webpack --config production.config.js && webpack --config PIG.config.js",
     "test": "NODE_PATH=./node_modules jest",
     "generate": "node scripts/generate.js",
-    "preinstall": "git update-index --skip-worktree Parse-Dashboard/parse-dashboard-config.json"
+    "preinstall": "git update-index --skip-worktree Parse-Dashboard/parse-dashboard-config.json",
+    "prestart": "webpack --config build.config.js --progress",
+    "start": "node ./Parse-Dashboard/index.js"
   },
   "jest": {
     "testPathDirs": [
