--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ node_modules/
 bundles/
 PIG/bundles/
 Parse-Dashboard/public/bundles/
-
+Parse-Dashboard/parse-dashboard-config.json
+dist/
 npm-debug.log
 
 // vim .swp
