--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "private": true,
+  "name": "parse-dashboard",
+  "description": "The parse dashboard",
+  "version": "2.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ParsePlatform/parse-dashboard"
+  },
+  "license": "LicenseRef-LICENSE",
+  "files": [
+    "dist" 
+  ],
   "dependencies": {
     "babel-runtime": "~5.8.25",
     "basic-auth": "^1.0.3",
@@ -22,6 +32,7 @@
     "babel-loader": "~5.3.0",
     "babel-plugin-remove-proptypes": "~1.0.0",
     "css-loader": "~0.18.0",
+    "gulp": "^3.9.1",
     "http-server": "~0.8.5",
     "immutable-devtools": "~0.0.4",
     "jest-cli": "^0.7.1",
@@ -40,9 +51,11 @@
     "build": "NODE_ENV=production webpack --config webpack/production.config.js && webpack --config webpack/PIG.config.js",
     "test": "NODE_PATH=./node_modules jest",
     "generate": "node scripts/generate.js",
-    "preinstall": "git update-index --skip-worktree Parse-Dashboard/parse-dashboard-config.json",
-    "prestart": "webpack --config webpack/build.config.js --progress",
-    "start": "node ./Parse-Dashboard/index.js"
+    "prepublish": "gulp",
+    "start": "node ./dist/Parse-Dashboard/index.js"
+  },
+  "bin": {
+    "parse-dashboard": "./bin/parse-dashboard"
   },
   "engines": {
     "node": ">=4.3"
