--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "license": "LicenseRef-LICENSE",
   "files": [
-    "dist" 
+    "Parse-Dashboard",
+    "bin"
   ],
   "dependencies": {
     "babel-runtime": "~5.8.25",
@@ -32,7 +33,6 @@
     "babel-loader": "~5.3.0",
     "babel-plugin-remove-proptypes": "~1.0.0",
     "css-loader": "~0.18.0",
-    "gulp": "^3.9.1",
     "http-server": "~0.8.5",
     "immutable-devtools": "~0.0.4",
     "jest-cli": "^0.7.1",
@@ -51,8 +51,8 @@
     "build": "NODE_ENV=production webpack --config webpack/production.config.js && webpack --config webpack/PIG.config.js",
     "test": "NODE_PATH=./node_modules jest",
     "generate": "node scripts/generate.js",
-    "prepublish": "gulp",
-    "start": "node ./dist/Parse-Dashboard/index.js"
+    "prepublish": "webpack --config webpack/publish.config.js --progress",
+    "start": "node ./Parse-Dashboard/index.js"
   },
   "bin": {
     "parse-dashboard": "./bin/parse-dashboard"
