--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "LicenseRef-LICENSE",
   "files": [
     "Parse-Dashboard",
-    "bin"
+    "bin",
+    "README.md",
+    "LICENSE"
   ],
   "dependencies": {
     "babel-runtime": "~5.8.25",
