--- a/package.json
+++ b/package.json
@@ -36,43 +36,45 @@
     "css-loader": "~0.18.0",
     "babel-runtime": "~5.8.25",
     "basic-auth": "^1.0.3",
+    "css-loader": "~0.18.0",
     "commander": "^2.9.0",
     "express": "^4.13.4",
-    "history": "~1.9.1",
+    "file-loader": "^0.8.5",
     "immutable": "~3.7.5",
     "immutable-devtools": "~0.0.4",
     "json-file-plus": "^3.2.0",
     "js-beautify": "~1.5.0",
     "marked": "^0.3.5",
-    "node-sass": "~3.3.2",
+    "node-sass": "~3.4.2",
+    "package-json": "^2.3.1",
     "parse": "1.6.14",
-    "prepend-http": "^1.0.3",
     "prismjs": "~1.2.0",
     "react": "^0.14.0",
+    "react-addons-test-utils": "^0.14.2",
     "react-dnd": "~2.0.2",
     "react-dnd-html5-backend": "~2.0.0",
     "react-dom": "^0.14.0",
-    "react-router": "1.0.0-rc1",
-    "sass-loader": "~2.0.1",
+    "react-router": "2.0.0",
+    "sass-loader": "~3.1.2",
     "style-loader": "~0.12.3",
     "svg-prep": "~1.0.0",
     "webpack": "~1.12.0"
   },
   "devDependencies": {
+    "history": "~1.9.1",
     "http-server": "~0.8.5",
     "jest-cli": "^0.7.1",
-    "react-addons-test-utils": "^0.14.2",
     "transform-jest-deps": "^2.1.0"
   },
   "scripts": {
     "dev": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
     "dashboard": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --progress --watch",
+    "dist": "npm run build && cp -r production/bundles Parse-Dashboard/public/bundles",
     "pig": "http-server ./PIG -p 4041 -s & webpack --config webpack/PIG.config.js --progress --watch",
     "build": "NODE_ENV=production webpack --config webpack/production.config.js && webpack --config webpack/PIG.config.js",
     "test": "NODE_PATH=./node_modules jest",
     "generate": "node scripts/generate.js",
     "prepublish": "webpack --config webpack/publish.config.js --progress",
-    "postinstall": "npm run dist",
     "start": "node ./Parse-Dashboard/index.js"
   },
   "bin": {
