--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "test": "NODE_PATH=./node_modules jest",
     "generate": "node scripts/generate.js",
     "prepublish": "webpack --config webpack/publish.config.js --progress",
+    "postinstall": "if [ -n \"$POST_INSTALL_BUILD\" ]; then npm run dist; fi",
     "start": "node ./Parse-Dashboard/index.js"
   },
   "bin": {
