--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "Logs Viewer",
     "Parse Config",
     "API Console",
-    "Class Level Permissions Editor"
+    "Class Level Permissions Editor",
+    "Send Push Notifications"
   ],
   "description": "The Parse Dashboard",
   "keywords": [
@@ -15,7 +16,7 @@
   ],
   "homepage": "https://github.com/ParsePlatform/parse-dashboard",
   "bugs": "https://github.com/ParsePlatform/parse-dashboard/issues",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/ParsePlatform/parse-dashboard"
