--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "basic-auth": "^1.0.3",
     "commander": "^2.9.0",
     "express": "^4.13.4",
+    "jade": "^1.11.0",
     "json-file-plus": "^3.2.0",
     "package-json": "^2.3.1"
   },
