--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "jest-cli": "^12.0.2",
     "js-beautify": "~1.5.0",
     "marked": "^0.3.5",
-    "node-sass": "~3.4.2",
+    "node-sass": "^3.7.0",
     "parse": "1.6.14",
     "prismjs": "~1.2.0",
     "react": "^15.0.1",
