Add node 6 to travis (#329)
* Add node 6 to travis

* Fix tests on node 5.7

* update node-sass version

--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "http-server": "~0.8.5",
     "immutable": "~3.7.5",
     "immutable-devtools": "~0.0.4",
-    "jest-cli": "^0.7.1",
+    "jest-cli": "^12.0.2",
     "js-beautify": "~1.5.0",
     "marked": "^0.3.5",
-    "node-sass": "~3.4.2",
+    "node-sass": "^3.7.0",
     "parse": "1.6.14",
     "prismjs": "~1.2.0",
     "react": "^15.0.1",
