--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,5 +1,10 @@
 {
   "apps": [
-
+    {
+      "serverURL": "https://translatorfree.herokuapp.com/parse",
+      "appId": "gmSADKnh6cyC6At4qp4xtfJ47avjpbGKZ68hzH5t",
+      "masterKey": "k4FPJjIuLh45zTIKWs98EG2mFotnNEK7DXqmymp8",
+      "appName": "translatorfree"
+    }
   ]
 }
