--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -6,5 +6,11 @@
       "masterKey": "k4FPJjIuLh45zTIKWs98EG2mFotnNEK7DXqmymp8",
       "appName": "translatorfree"
     }
+  ],
+   "users": [
+    {
+      "user":"vuraltuna",
+      "pass":"kayyuM512"
+    }
   ]
 }
