--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "test": "NODE_PATH=./node_modules jest",
     "generate": "node scripts/generate.js",
     "prepublish": "webpack --config webpack/publish.config.js",
-    "start": "node ./index.js --config ./parse-dashboard-config.json --allowInsecureHTTP=1"
+    "start": "node ./Parse-Dashboard/index.js --config ./parse-dashboard-config.json --allowInsecureHTTP=1"
   },
   "bin": {
     "parse-dashboard": "./bin/parse-dashboard"
