Prepared app for deployment

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -10,7 +10,7 @@
       "serverURL": "https://voice-translator.herokuapp.com/parse",
       "appId": "a7CZrog0BlDByToh79OwaW2UyfBkuoiVcQwBBi8I",
       "masterKey": "rOZa6y1jqNpGhTUuHPIjvtQ641VqvODKLh0Gs85L",
-      "appName": “Translator"
+      "appName": "Translator"
     }
   ],
    "users": [
