--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -4,13 +4,13 @@
       "serverURL": "https://translatorfree.herokuapp.com/parse",
       "appId": "gmSADKnh6cyC6At4qp4xtfJ47avjpbGKZ68hzH5t",
       "masterKey": "k4FPJjIuLh45zTIKWs98EG2mFotnNEK7DXqmymp8",
-      "appName": “TranslatorFree"
+      "appName": "translatorfree"
     },
     {
       "serverURL": "https://voice-translator.herokuapp.com/parse",
       "appId": "a7CZrog0BlDByToh79OwaW2UyfBkuoiVcQwBBi8I",
       "masterKey": "rOZa6y1jqNpGhTUuHPIjvtQ641VqvODKLh0Gs85L",
-      "appName": "Translator"
+      "appName": "voice-translator"
     }
   ],
    "users": [
