Update comment and add Pointer Permissions Editor to feature list

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "Parse Config",
     "API Console",
     "Class Level Permissions Editor",
+    "Pointer Permissions Editor",
     "Send Push Notifications",
     "Logs Viewer"
   ],
