--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -16,7 +16,7 @@
       "serverURL": "https://izocam.herokuapp.com/parse",
       "appId": "gmSADKnh6cyC6At4qp4xtfJ47avjpbGKZ68hzH5t",
       "masterKey": "k4FPJjIuLh45zTIKWs98EG2mFotnNEK7DXqmymp8",
-      "appName": “izocam”
+      "appName": "izocam"
     }
   ],
    "users": [
