--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,7 +1,7 @@
 {
   "apps": [
     {
-        "serverURL": "http://comerate2016.herokuapp.com/parse", // If your Parse Server's endpoint is not at /parse, you need to replace /parse with the correct endpoint
+        "serverURL": "http://comerate2016.herokuapp.com/parse", 
         "appId": "2016comrate",
         "masterKey": "2016comrate1",
         "appName": "comrate"
@@ -9,7 +9,7 @@
   ],
   "users": [
     {
-      "user":"devintosh", // Used to log in to your Parse Dashboard
+      "user":"devintosh", 
       "pass":"wideLand"
     }
   ]
