--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,10 +1,8 @@
 {
   "apps": [{
-    "serverURL": "",
-    "appId": "",
-    "masterKey": "",
-    "appName": "",
-    "iconName": ""
-  }],
-  "iconsFolder": "icons"
+    "serverURL": "http://localhost:5051/parse",
+    "appId": "appId",
+    "masterKey": "masterKey",
+    "appName": ""
+  }]
 }
