--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-polyfill": "^6.7.2",
     "babel-runtime": "~5.8.25",
     "css-loader": "~0.18.0",
+    "depd": "^1.1.0",
     "file-loader": "^0.8.5",
     "history": "^2.1.2",
     "http-server": "~0.8.5",
@@ -56,6 +57,7 @@
     "marked": "^0.3.5",
     "node-sass": "^3.7.0",
     "parse": "1.6.14",
+    "parse-server": "^2.2.18",
     "prismjs": "~1.2.0",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
@@ -63,6 +65,7 @@
     "react-dnd-html5-backend": "~2.0.0",
     "react-dom": "^15.0.1",
     "react-router": "^2.6.0",
+    "request-promise": "^4.1.1",
     "sass-loader": "~3.1.2",
     "style-loader": "~0.12.3",
     "svg-prep": "~1.0.0",
