--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dnd-html5-backend": "~2.0.0",
     "react-dom": "^15.0.1",
     "react-router": "^2.6.0",
+    "request-promise": "^4.1.1",
     "sass-loader": "~3.1.2",
     "style-loader": "~0.12.3",
     "svg-prep": "~1.0.0",
