--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
-
-
+node_modules/
+PIG/bundles/
+Parse-Dashboard/public/bundles/
+Parse-Dashboard/parse-dashboard-config.json
 npm-debug.log
 
 // vim .swp
