--- a/package.json
+++ b/package.json
@@ -33,48 +33,49 @@
     "LICENSE"
   ],
   "dependencies": {
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.15.2",
-    "commander": "^2.9.0",
-    "connect-flash": "^0.1.1",
-    "cookie-session": "^2.0.0-alpha.1",
-    "csurf": "^1.9.0",
-    "express": "^4.13.4",
-    "json-file-plus": "^3.2.0",
-    "package-json": "^2.3.1",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "bcryptjs": "2.3.0",
+    "body-parser": "1.15.2",
+    "commander": "2.9.0",
+    "deepcopy": "0.6.3",
+    "express": "4.14.0",
+    "intersect": "1.0.1",
+    "lodash": "4.17.2",
+    "lru-cache": "4.0.1",
+    "mime": "1.3.4",
+    "mongodb": "2.2.10",
+    "multer": "1.2.0",
+    "parse": "1.9.2",
+    "parse-server-fs-adapter": "1.0.1",
+    "parse-server-push-adapter": "1.1.0",
+    "parse-server-s3-adapter": "1.0.5",
+    "parse-server-simple-mailgun-adapter": "1.0.0",
+    "pg-promise": "5.4.2",
+    "redis": "2.6.3",
+    "request": "2.79.0",
+    "semver": "5.2.0",
+    "tv4": "1.2.7",
+    "winston": "2.3.0",
+    "winston-daily-rotate-file": "1.3.1",
+    "ws": "1.1.1"
   },
   "devDependencies": {
-    "babel-core": "~5.8.12",
-    "babel-loader": "~5.3.0",
-    "babel-plugin-remove-proptypes": "~1.0.0",
-    "babel-polyfill": "^6.7.2",
-    "babel-runtime": "~5.8.25",
-    "css-loader": "~0.18.0",
-    "file-loader": "^0.8.5",
-    "history": "^2.1.2",
-    "http-server": "~0.8.5",
-    "immutable": "~3.7.5",
-    "immutable-devtools": "~0.0.4",
-    "jest-cli": "^12.0.2",
-    "js-beautify": "~1.5.0",
-    "marked": "^0.3.5",
-    "node-sass": "^3.7.0",
-    "parse": "1.6.14",
-    "prismjs": "~1.2.0",
-    "react": "^15.0.1",
-    "react-addons-test-utils": "^15.0.1",
-    "react-dnd": "~2.1.4",
-    "react-dnd-html5-backend": "~2.0.0",
-    "react-dom": "^15.0.1",
-    "react-router": "^2.6.0",
-    "request-promise": "^4.1.1",
-    "sass-loader": "~3.1.2",
-    "style-loader": "~0.12.3",
-    "svg-prep": "~1.0.0",
-    "transform-jest-deps": "^2.1.0",
-    "webpack": "~1.12.0"
+     "babel-cli": "6.18.0",
+    "babel-core": "6.18.2",
+    "babel-plugin-syntax-flow": "6.13.0",
+    "babel-plugin-transform-flow-strip-types": "6.18.0",
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-stage-0": "6.5.0",
+    "babel-register": "6.18.0",
+    "bcrypt-nodejs": "0.0.3",
+    "cross-env": "3.1.3",
+    "deep-diff": "0.3.4",
+    "gaze": "1.1.1",
+    "istanbul": "1.0.0-alpha.1",
+    "jasmine": "2.5.2",
+    "jasmine-spec-reporter": "^2.7.0",
+    "mongodb-runner": "3.4.0",
+    "nodemon": "1.11.0",
+    "request-promise": "4.1.1"
   },
   "scripts": {
     "dev": "node ./Parse-Dashboard/index.js & webpack --config webpack/build.config.js --devtool eval-source-map --progress --watch",
@@ -90,7 +91,7 @@
     "parse-dashboard": "./bin/parse-dashboard"
   },
   "engines": {
-    "node": ">=4.3"
+    "node": ">=4.5"
   },
   "main": "Parse-Dashboard/app.js",
   "jest": {
