Added title to plus button below table  which adds a new row

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,9 +1,9 @@
 {
   "apps": [{
-    "serverURL": "",
-    "appId": "",
-    "masterKey": "",
-    "appName": "",
+    "serverURL": "http://onlinebusinesscard.herokuapp.com/parse",
+    "appId": "businesscards",
+    "masterKey": "1234509876abcdef",
+    "appName": "Business cards",
     "iconName": ""
   }],
   "iconsFolder": "icons"
