--- a/package.json
+++ b/package.json
@@ -50,7 +50,11 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "~7.0.0",
     "babel-plugin-remove-proptypes": "~1.0.0",
-    "babel-polyfill": "^6.7.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "~6.23.0",
     "css-loader": "~0.28.2",
     "eslint": "^3.8.1",
@@ -100,14 +104,10 @@
   },
   "main": "Parse-Dashboard/app.js",
   "jest": {
-    "testPathDirs": [
+    "roots": [
       "src/lib"
     ],
-    "scriptPreprocessor": "<rootDir>/testing/preprocessor.js",
-    "testDirectoryName": "tests",
-    "testFileExtensions": [
-      "test.js"
-    ],
+    "transform": {".*":  "<rootDir>/testing/preprocessor.js"},
     "unmockedModulePathPatterns": [
       "react",
       "react-dom",
