--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "commander": "^2.9.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-alpha.1",
     "csurf": "^1.9.0",
     "express": "^4.13.4",
+    "jquery": "^3.2.1",
     "json-file-plus": "^3.2.0",
+    "material-design-iconic-font": "^2.2.0",
     "package-json": "^2.3.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
