--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dnd": "~2.1.4",
     "react-dnd-html5-backend": "~2.0.0",
     "react-dom": "^15.0.1",
+    "react-media": "^1.6.1",
     "react-router": "^2.6.0",
     "request-promise": "^4.1.1",
     "sass-loader": "~3.1.2",
