--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "js-beautify": "~1.6.14",
     "marked": "^0.3.5",
     "node-sass": "^4.5.3",
-    "parse": "1.9.2",
+    "parse": "^1.10.2",
     "prismjs": "~1.6.0",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
