--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "package-json": "^2.3.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "~5.8.12",
