--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "LICENSE"
   ],
   "dependencies": {
+    "@back4app/back4app-react-components": "^1.0.3",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "bootstrap": "4.0.0-alpha.6",
@@ -51,11 +52,12 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-core": "~5.8.12",
+    "babel-core": "^5.8.38",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "~5.3.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-remove-proptypes": "~1.0.0",
     "babel-polyfill": "^6.7.2",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "~5.8.25",
     "css-loader": "~0.18.0",
     "eslint": "^3.8.1",
