Fix defaults for App card.

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -5,7 +5,8 @@
     "masterKey": "",
     "appName": "",
     "iconName": "",
-    "backgroundColor":"#000000"
+    "primaryBackgroundColor": "",
+    "secondaryBackgroundColor": ""
   }],
   "iconsFolder": "icons"
 }
