add background color in AppCard (#838)
* add background color in AppCard

* Add background color in AppCard (#681)

* Add background color in AppCard

* add line to changelog

* Add primaryBackgroundColor and secondaryBackgroundColor color in AppCard (#838)

* Add primaryBackgroundColor and secondaryBackgroundColor color color in AppCard

* add line to changelog

* Fix defaults for App card.

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -4,7 +4,9 @@
     "appId": "",
     "masterKey": "",
     "appName": "",
-    "iconName": ""
+    "iconName": "",
+    "primaryBackgroundColor": "",
+    "secondaryBackgroundColor": ""
   }],
   "iconsFolder": "icons"
 }
