--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "popper.js": "^1.12.9",
+    "react-tabs": "^2.2.2",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
