--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cookie-session": "^2.0.0-alpha.1",
     "csurf": "^1.9.0",
     "express": "^4.13.4",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.2.1",
     "json-file-plus": "^3.2.0",
     "material-design-iconic-font": "^2.2.0",
