Add public/index.html to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ bundles/
 PIG/index.html
 PIG/bundles/
 production/
-Parse-Dashboard/index.html
+Parse-Dashboard/public/index.html
 Parse-Dashboard/public/bundles/
 npm-debug.log
 .eslintcache
