--- a/package.json
+++ b/package.json
@@ -70,24 +70,24 @@
     "jest-cli": "^23.2.0",
     "js-beautify": "~1.7.5",
     "marked": "^0.4.0",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.0",
     "parse": "^1.10.2",
     "path-to-regexp": "^2.2.1",
     "prismjs": "~1.15.0",
     "prop-types": "^15.6.2",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
-    "react-addons-test-utils": "^15.0.1",
     "react-dnd": "~5.0.0",
     "react-dnd-html5-backend": "~5.0.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "request-promise": "^4.1.1",
+    "react-test-renderer": "^16.4.1",
+    "request": "^2.87.0",
+    "request-promise": "~4.2.2",
     "sass-loader": "~7.0.3",
     "style-loader": "~0.21.0",
     "svg-prep": "~1.0.0",
-    "transform-jest-deps": "^2.1.0",
     "webpack": "~4.12.1",
     "webpack-cli": "^3.0.8"
   },
