--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,13 @@ language: node_js
 node_js:
 - '6.11'
 - '8.8'
-before_script: ./scripts/before_script.sh
+before_install:
+  - npm install -g greenkeeper-lockfile@1
+before_script: 
+  - ./scripts/before_script.sh
+  - greenkeeper-lockfile-update
+after_script:
+  - greenkeeper-lockfile-upload
 cache:
   directories:
     - node_modules
