Removes usage from Parse.Promise
- Use native Promises instead

--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,8 +1,8 @@
 {
   "apps": [{
-    "serverURL": "",
-    "appId": "",
-    "masterKey": "",
+    "serverURL": "http://localhost:1337/parse",
+    "appId": "hello",
+    "masterKey": "world",
     "appName": "",
     "iconName": "",
     "primaryBackgroundColor": "",
