--- a/package.json
+++ b/package.json
@@ -47,17 +47,17 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "babel-core": "~6.26.3",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/runtime": "7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-loader": "~8.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-runtime": "~6.26.0",
     "css-loader": "~1.0.0",
     "eslint": "^5.0.0",
     "eslint-plugin-jest": "^21.17.0",
