--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,8 @@
         "react/react-in-jsx-scope": 1,
         "no-console": 0,
         "no-case-declarations": 0
+    },
+    "globals": {
+      "b4aSettings": true
     }
 }
